@@ -959,3 +959,4 @@ Tracker 2
 	FixedX no
 	FixedY no
 	Tolerance 100
+End
