@@ -1,3 +1,4 @@
+* Fixed issue#1 (Last tracker in some Flame exports receives an empty shift channel)
 * Modified the Accumulator to support nested iterations and random access
 
 === 2.2.4 / 2011-04-04
